--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 body{
       font-family: "Inter", sans-serif;
 }
-    /* <!-- --------------------------------header start---------------------------------- --> */
+    /* <!------------------------------------header start---------------------------------- --> */
 
 nav .nav-wrapper{
     display: flex;
