--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav .nav-wrapper .btn:hover{
     /* <!-- --------------------------------header start---------------------------------- --> */
     /* <!-- --------------------------------banner start---------------------------------- --> */
     #banner{
-        background:url(/banner.png);
+        background:url(./img/banner.png);
         background-size: cover;
         background-repeat: no-repeat;
         padding: 115px 0 179px 0;
